<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    tools:ignore="ExtraText">

    <ImageView
        android:id="@+id/LogoLoginAva"
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:layout_marginEnd="70dp"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/logo_avaclone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/avaclonelogo" />

    <TextView
        android:id="@+id/TxtLoginAVA"
        android:layout_height="wrap_content"
        android:layout_marginEnd="37dp"
        android:layout_marginLeft="38dp"
        android:layout_marginRight="37dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="16dp"
        android:text="@string/TxtloginAVA"
        android:textColor="@color/blackText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LogoLoginAva" />

    <EditText
        android:id="@+id/LoginTxtInput"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginEnd="21dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="21dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/palavra_usuario"
        android:inputType="number"
        android:textColorHint="@color/cinzaText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TxtLoginAVA" />@string/palavra_usuario
        app:layout_constraintBottom_toTopOf="@+id/PassTxtInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <EditText
        android:id="@+id/PassTxtInput"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginEnd="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/palavra_senha"
        android:inputType="textPassword"
        android:textColorHint="@color/cinzaText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LoginTxtInput" />

    <CheckBox
        android:id="@+id/RememberBox"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginEnd="215dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="215dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/checkbox_remember"
        android:textColor="@color/blackText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PassTxtInput" />

    <Button
        android:id="@+id/BtnLogin"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginEnd="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:background="#272b30"
        android:text="@string/palavra_logar"
        android:textColor="@color/whiteText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RememberBox" />

</android.support.constraint.ConstraintLayout>