<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".GradeActivity">


    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        />


    <ImageView
        android:id="@+id/iconegrade"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/LabelGrade"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:srcCompat="@drawable/ic_grade" />

    <TextView
        android:id="@+id/grade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="38dp"
        android:text="@string/gradecab"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/iconegrade"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/grade2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="22dp"
        android:text="@string/LabelDisc"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/iconedisc"
        app:layout_constraintTop_toBottomOf="@+id/cardnovopost" />

    <ImageView
        android:id="@+id/iconedisc"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/disciplinasofert"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardnovopost"
        app:srcCompat="@drawable/ic_disciplinas" />

    <android.support.v7.widget.CardView
        android:id="@+id/cardnovopost"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:cardBackgroundColor="@color/cardcolor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iconegrade"
        tools:style="@style/CardView">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:horizontalSpacing="2dp"
            android:stretchMode="columnWidth"
            android:verticalSpacing="2dp">

            <TextView
                android:id="@+id/espaçamento"
                android:layout_width="102dp"
                android:layout_height="40dp"
                android:layout_column="0"
                android:layout_row="0"
                android:text="@string/espaçamento" />

            <TextView
                android:id="@+id/terça"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_row="0"
                android:text="@string/terça"
                android:textColor="@color/cinzaText" />

            <TextView
                android:id="@+id/segunda"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="0"
                android:text="@string/segunda"
                android:textColor="@color/cinzaText" />

            <TextView
                android:id="@+id/quarta"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_column="3"
                android:layout_row="0"
                android:shadowColor="@color/cinzaText"
                android:text="@string/quarta"
                android:textColor="@color/cinzaText" />

            <TextView
                android:id="@+id/quinta"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_column="5"
                android:layout_row="0"
                android:text="@string/sexta"
                android:textColor="@color/cinzaText" />

            <TextView
                android:id="@+id/sexta"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_column="4"
                android:layout_row="0"
                android:text="@string/quinta"
                android:textColor="@color/cinzaText" />

            <TextView
                android:id="@+id/horario1"
                android:layout_width="102dp"
                android:layout_height="30dp"
                android:layout_column="0"
                android:layout_row="1"
                android:text="@string/horario1"
                android:textAllCaps="false"
                android:textColor="@color/cinzaText" />

            <TextView
                android:id="@+id/horario2"
                android:layout_width="102dp"
                android:layout_height="30dp"
                android:layout_column="0"
                android:layout_row="2"
                android:text="@string/horario2"
                android:textColor="@color/cinzaText" />

            <TextView
                android:id="@+id/horario3"
                android:layout_width="102dp"
                android:layout_height="30dp"
                android:layout_column="0"
                android:layout_row="3"
                android:text="@string/horario3"
                android:textColor="@color/cinzaText" />

            <TextView
                android:id="@+id/horario4"
                android:layout_width="102dp"
                android:layout_height="30dp"
                android:layout_column="0"
                android:layout_row="4"
                android:text="@string/horario4"
                android:textColor="@color/cinzaText" />

            <TextView
                android:id="@+id/horario5"
                android:layout_width="102dp"
                android:layout_height="30dp"
                android:layout_column="0"
                android:layout_row="5"
                android:text="@string/horario5"
                android:textColor="@color/cinzaText" />

            <TextView
                android:id="@+id/horario6"
                android:layout_width="102dp"
                android:layout_height="30dp"
                android:layout_column="0"
                android:layout_row="6"
                android:text="@string/horario6"
                android:textColor="@color/cinzaText" />

            <TextView
                android:id="@+id/sg5"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_column="1"
                android:layout_row="5"
                android:text="@string/vazio"
                android:textColor="@color/blackText" />

            <TextView
                android:id="@+id/sg2"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_column="1"
                android:layout_row="2"
                android:text="@string/vazio"
                android:textColor="@color/blackText" />

            <TextView
                android:id="@+id/sg4"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_column="1"
                android:layout_row="4"
                android:text="@string/vazio"
                android:textColor="@color/blackText" />

            <TextView
                android:id="@+id/sg1"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_column="1"
                android:layout_row="1"
                android:text="@string/vazio"
                android:textColor="@color/blackText" />

            <TextView
                android:id="@+id/sg3"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_column="1"
                android:layout_row="3"
                android:text="@string/vazio"
                android:textColor="@color/blackText" />

            <TextView
                android:id="@+id/sg6"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_column="1"
                android:layout_row="6"
                android:text="@string/vazio"
                android:textColor="@color/blackText" />

            <TextView
                android:id="@+id/tr1"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_column="2"
                android:layout_row="1"
                android:text="@string/vazio"
                android:textColor="@color/blackText" />

            <TextView
                android:id="@+id/tr2"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_column="2"
                android:layout_row="2"
                android:text="@string/vazio"
                android:textColor="@color/blackText" />

            <TextView
                android:id="@+id/tr3"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_column="2"
                android:layout_row="3"
                android:text="@string/vazio"
                android:textColor="@color/blackText" />

            <TextView
                android:id="@+id/tr4"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_column="2"
                android:layout_row="4"
                android:text="@string/vazio"
                android:textColor="@color/blackText" />

            <TextView
                android:id="@+id/tr5"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_column="2"
                android:layout_row="5"
                android:text="@string/vazio"
                android:textColor="@color/blackText" />

            <TextView
                android:id="@+id/tr6"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_column="2"
                android:layout_row="6"
                android:text="@string/vazio"
                android:textColor="@color/blackText" />

            <TextView
                android:id="@+id/qr1"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_column="3"
                android:layout_row="1"
                android:text="@string/vazio"
                android:textColor="@color/blackText" />

            <TextView
                android:id="@+id/qr2"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_column="3"
                android:layout_row="2"
                android:text="@string/vazio"
                android:textColor="@color/blackText" />

            <TextView
                android:id="@+id/qr3"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_column="3"
                android:layout_row="3"
                android:text="@string/vazio"
                android:textColor="@color/blackText" />

            <TextView
                android:id="@+id/qr4"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_column="3"
                android:layout_row="4"
                android:text="@string/vazio"
                android:textColor="@color/blackText" />

            <TextView
                android:id="@+id/qr5"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_column="3"
                android:layout_row="5"
                android:text="@string/vazio"
                android:textColor="@color/blackText" />

            <TextView
                android:id="@+id/qr6"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_column="3"
                android:layout_row="6"
                android:text="@string/vazio"
                android:textColor="@color/blackText" />

            <TextView
                android:id="@+id/qu1"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_column="4"
                android:layout_row="1"
                android:text="@string/vazio"
                android:textColor="@color/blackText" />

            <TextView
                android:id="@+id/qu2"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_column="4"
                android:layout_row="2"
                android:text="@string/vazio"
                android:textColor="@color/blackText" />

            <TextView
                android:id="@+id/qu3"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_column="4"
                android:layout_row="3"
                android:text="@string/vazio"
                android:textColor="@color/blackText" />

            <TextView
                android:id="@+id/qu4"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_column="4"
                android:layout_row="4"
                android:text="@string/vazio"
                android:textColor="@color/blackText" />

            <TextView
                android:id="@+id/qu5"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_column="4"
                android:layout_row="5"
                android:text="@string/vazio"
                android:textColor="@color/blackText" />

            <TextView
                android:id="@+id/qu6"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_column="4"
                android:layout_row="6"
                android:text="@string/vazio"
                android:textColor="@color/blackText" />

            <TextView
                android:id="@+id/sex1"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_column="5"
                android:layout_row="1"
                android:text="@string/vazio"
                android:textColor="@color/blackText" />

            <TextView
                android:id="@+id/sex2"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_column="5"
                android:layout_row="2"
                android:text="@string/vazio"
                android:textColor="@color/blackText" />

            <TextView
                android:id="@+id/sex3"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_column="5"
                android:layout_row="3"
                android:text="@string/vazio"
                android:textColor="@color/blackText" />

            <TextView
                android:id="@+id/sex4"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_column="5"
                android:layout_row="4"
                android:text="@string/vazio"
                android:textColor="@color/blackText" />

            <TextView
                android:id="@+id/sex5"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_column="5"
                android:layout_row="5"
                android:text="@string/vazio"
                android:textColor="@color/blackText" />

            <TextView
                android:id="@+id/sex6"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_column="5"
                android:layout_row="6"
                android:text="@string/vazio"
                android:textColor="@color/blackText" />

        </GridLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/carddisc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:cardBackgroundColor="@color/cardcolor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iconedisc"
        tools:style="@style/CardView">


        <android.support.constraint.ConstraintLayout
            android:id="@+id/ConstraintCardLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ListView
                android:id="@+id/listdiscW"
                style="@style/Widget.AppCompat.ListView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:headerDividersEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>
    </ScrollView>